update index and meta

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cek COVID-19 Indonesia</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <meta name="description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia."/>
+    <meta name="description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia."/>
 	<meta name="keywords" content="Cek COVID-19 Indonesia" />
     <meta name="author" content="indrij.vercel.app" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -15,7 +15,7 @@
     <meta name="twitter:creator" content="@indrij_" />
     <meta property="og:title" content="Cek COVID-19 Indonesia" />
     <meta property="og:type" content="information covid19 website"/>
-    <meta property="og:description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia." />
+    <meta property="og:description" content="Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia." />
     <meta property="og:image" content="https://cekcovid19id.vercel.app/img/screenshot/index.png" />
     <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="dist/bootstrap-icons/font/bootstrap-icons.css">
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h1 class="title-home">Cek COVID-19 Indonesia</h1>
-                    <p>Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Indonesia.</p>
+                    <p>Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia.</p>
                 </div>
                 <div class="col-lg-3">
                     <a href="tel:119" class="card-telp">
