updated api data

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="fas fa-plus"></i>Total Terkonfirmasi</h6>
                             </div>
-                            <div class="text-center angka-kasus" id="konfirmasi"></div>
+                            <div class="text-center" id="konfirmasi"></div>
                             <div class="d-flex justify-content-end" id="harian-konfirmasi"></div>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="fas fa-hospital"></i>Kasus Aktif</h6>
                             </div>
-                            <div class="text-center angka-kasus" id="dirawat"></div>
+                            <div class="text-center" id="dirawat"></div>
                             <div class="d-flex justify-content-end" id="harian-dirawat"></div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="far fa-smile"></i>Sembuh</h6>
                             </div>
-                            <div class="text-center angka-kasus" id="sembuh"></div>
+                            <div class="text-center" id="sembuh"></div>
                             <div class="d-flex justify-content-end" id="harian-sembuh"></div>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="far fa-frown"></i>Meninggal Dunia</h6>
                             </div>
-                            <div class="text-center angka-kasus" id="meninggal-dunia"></div>
+                            <div class="text-center" id="meninggal-dunia"></div>
                             <div class="d-flex justify-content-end" id="harian-meninggal-dunia"></div>
                         </div>
                     </div>
@@ -201,7 +201,6 @@
 
     <script src="dist/bootstrap/js/bootstrap.min.js"></script>
     <script src="dist/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js"></script>
     <script src="dist/momentjs/moment-with-locales.min.js"></script>
     <script src="src/js/index.min.js"></script>
 </body>
