--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <div class="col-lg-6">
                     <h1 class="title-home">Cek COVID-19 Indonesia</h1>
                     <p>Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia.</p>
+                    <div id="test-mask"></div>
                 </div>
                 <div class="col-lg-3">
                     <a href="tel:119" class="card-telp">
@@ -96,8 +97,10 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="fas fa-plus"></i>Total Terkonfirmasi</h6>
                             </div>
-                            <div class="text-center" id="konfirmasi"></div>
-                            <div class="d-flex justify-content-end" id="harian-konfirmasi"></div>
+                            <div class="text-center angka-kasus" id="konfirmasi"></div>
+                            <div class="d-flex justify-content-end">
+                                <i class="bi-arrow-up-circle"></i><span class="mx-2" id="harian-konfirmasi"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -107,8 +110,10 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="fas fa-hospital"></i>Kasus Aktif</h6>
                             </div>
-                            <div class="text-center" id="dirawat"></div>
-                            <div class="d-flex justify-content-end" id="harian-dirawat"></div>
+                            <div class="text-center angka-kasus" id="dirawat"></div>
+                            <div class="d-flex justify-content-end">
+                                <span class="mx-2" id="harian-dirawat"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -118,8 +123,10 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="far fa-smile"></i>Sembuh</h6>
                             </div>
-                            <div class="text-center" id="sembuh"></div>
-                            <div class="d-flex justify-content-end" id="harian-sembuh"></div>
+                            <div class="text-center angka-kasus" id="sembuh"></div>
+                            <div class="d-flex justify-content-end">
+                                <i class="bi-arrow-up-circle"></i><span class="mx-2" id="harian-sembuh"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -129,8 +136,10 @@
                             <div class="card-title">
                                 <h6 class="text-uppercase"><i class="far fa-frown"></i>Meninggal Dunia</h6>
                             </div>
-                            <div class="text-center" id="meninggal-dunia"></div>
-                            <div class="d-flex justify-content-end" id="harian-meninggal-dunia"></div>
+                            <div class="text-center angka-kasus" id="meninggal-dunia"></div>
+                            <div class="d-flex justify-content-end">
+                                <i class="bi-arrow-up-circle"></i><span class="mx-2" id="harian-meninggal-dunia"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -201,6 +210,7 @@
 
     <script src="dist/bootstrap/js/bootstrap.min.js"></script>
     <script src="dist/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js"></script>
     <script src="dist/momentjs/moment-with-locales.min.js"></script>
     <script src="src/js/index.min.js"></script>
 </body>
