--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                 <div class="col-lg-6">
                     <h1 class="title-home">Cek COVID-19 Indonesia</h1>
                     <p>Informasi Data Statistik Kasus COVID-19 Indonesia dan Data Provinsi di Seluruh Indonesia.</p>
-                    <div id="test-mask"></div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <a href="tel:119" class="card-telp">
                         <div class="card mb-3">
                             <div class="card-body">
@@ -65,7 +64,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="card mb-3 card-sosmed">
                         <div class="card-body">
                             <h6>Ikuti Perkembangan Seputar COVID-19 Dari Kemenkes RI</h6>
@@ -91,7 +90,7 @@
                 </div>
             </div>
             <div class="row mt-3">
-                <div class="col-lg-3 mb-3">
+                <div class="col-lg-3 col-md-6 mb-3">
                     <div class="card terkonfirmasi">
                         <div class="card-body">
                             <div class="card-title">
@@ -104,7 +103,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 mb-3">
+                <div class="col-lg-3 col-md-6 mb-3">
                     <div class="card kasus-aktif">
                         <div class="card-body">
                             <div class="card-title">
@@ -117,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 mb-3">
+                <div class="col-lg-3 col-md-6 mb-3">
                     <div class="card sembuh">
                         <div class="card-body">
                             <div class="card-title">
@@ -130,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 mb-3">
+                <div class="col-lg-3 col-md-6 mb-3">
                     <div class="card meninggal">
                         <div class="card-body">
                             <div class="card-title">
