--- a/index.html
+++ b/index.html
@@ -196,6 +196,22 @@
                     </ol>
                 </div>
             </div>
+            <div class="row mt-5">
+                <div class="col-lg-12">
+                    <div class="card-kontribusi">
+                        <div class="card-body">
+                            <div class="row p-3">
+                                <div class="col-lg-12">
+                                    <div class="text-center">
+                                        <h3>Ingin berkontribusi di Cek COVID-19 Indonesia ?</h3>
+                                        <p>Silahkan klik <a href="https://github.com/indrijunanda/cekcovid19id" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <button id="back-to-top">Back to Top <i class="bi-arrow-up"></i></button>
     </main>
