--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <h4 class="fw-bold">Gejala</h4>
                     <p>Gejala awal infeksi COVID-19 bisa menyerupai gejala flu, yaitu demam, pilek, batuk kering, sakit tenggorokan, dan sakit kepala. Setelah itu, gejala dapat hilang dan sembuh atau malah memberat. Penderita dengan gejala yang berat bisa mengalami demam tinggi, batuk berdahak atau berdarah, sesak napas, dan nyeri dada.</p>
                     <h4 class="fw-bold">Cara Penularan</h4>
-                    <p>Seseoarang dapat terinfeksi dari penderita COVID-19. Virus ini menyebar melalui tetesan kecil (droplet) dari hidung atau mulut saat batuk atau bersin. Droplet tersebut kemudian jatuh pada benda disekitarnya. Dan ketika ada orang lain yang menyentuh benda yang sudah terkontaminasi dengan droplet tersebut, lalu orang itu menyentuh mata, hidung ataupun mulut, maka orang tersebut dapat terinfeksi COVID-19. Seseoarang juga dapat terinfeksi COVID-19 ketika tanpa sengaja menghirup droplet dari penderita.</p>
+                    <p>Seseoarang dapat terinfeksi dari penderita COVID-19. Virus ini menyebar melalui tetesan kecil (droplet) dari hidung atau mulut saat batuk atau bersin. Droplet tersebut kemudian jatuh pada benda disekitarnya. Dan ketika ada orang lain yang menyentuh benda yang sudah terkontaminasi dengan droplet tersebut, lalu orang itu menyentuh mata, hidung ataupun mulut, maka orang tersebut dapat terinfeksi COVID-19. Seseorang juga dapat terinfeksi COVID-19 ketika tanpa sengaja menghirup droplet dari penderita.</p>
                 </div>
             </div>
             <div class="row mt-5">
@@ -189,27 +189,11 @@
                         <li><p>Cuci Tangan secara rutin menggunakan air dan sabun atau cairan pembersih tangan berbahan alkohol</p></li>
                         <li><p>Selalu jaga jarak aman. Terutama dengan orang yang batuk atau bersin.</p></li>
                         <li><p>Mengenakan masker jika pembatasan fisik tidak memungkinkan</p></li>
-                        <li><p>Jangan sentuk mata, hidung atau mulut</p></li>
+                        <li><p>Jangan sentuh mata, hidung atau mulut</p></li>
                         <li><p>Saat batuk atau bersin, tutup mulut dan hidung dengan lengan atau tisu</p></li>
                         <li><p>Jangan keluar rumah jika tidak ada kepentingan mendesak atau jika merasa tidak enak badan</p></li>
                         <li><p>Jika demam, batuk atau kesulatan bernapas segera cari bantuan medis.</p></li>
                     </ol>
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-lg-12">
-                    <div class="card-kontribusi">
-                        <div class="card-body">
-                            <div class="row p-3">
-                                <div class="col-lg-12">
-                                    <div class="text-center">
-                                        <h3>Ingin berkontribusi di Cek COVID-19 Indonesia ?</h3>
-                                        <p>Silahkan klik <a href="https://github.com/indrijunanda/cekcovid19id" class="anchor-redirect" target="_blank">disini <i class="bi bi-box-arrow-up-right"></i></a></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
